--- a/index.html
+++ b/index.html
@@ -5,60 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite Foods WebApp</title>
-    <style>
-        header ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: blue ;
-        }
-        header li{
-            float: left;
-        }
-        header li a {
-            display: block;
-            color: rgb(15, 15, 15);
-             
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        header li a:hover {
-            background-color: black;
-        }
-        .body{
-            padding: 0;
-            margin: 0;
-            background-color: aqua;
-        }
-        .text-content a{
-            text-decoration: none;
-            color: black;
-        } 
-        .images{
-            width: 50%;
-            margin: 0 auto;
-        }
-        .labels{
-            margin-left: 240px;
-            margin-bottom: 40px;
-       }
-       .fooditem{
-        width: 500px;
-        height: 500px;
-       }
-       .h2{
-        background-color: chocolate;
-        width: 250px;
-        margin-left: 5px;
-       }
-       .food{
-        background-color: blue;
-        width: 150px;
-        margin-left: 5px;
-       }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
     <header>
